[tool.poetry]
name = "signalr-async"
version = "0.1.6"
description = "Python SignalR async client"
authors = ["Sam Mosleh <sam.mosleh@ut.ac.ir>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/sam-mosleh/signalr-async"
keywords = ["SignalR", "SignalR client", "Real-time messaging"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.3"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.6.4"
autoflake = "^1.4"
pytest-cov = "^2.10.1"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
