[tool.poetry]
name = "signalr-async"
version = "1.0.0"
description = "Python SignalR async client"
authors = ["Sam Mosleh <sam.mosleh@ut.ac.ir>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/sam-mosleh/signalr-async"
keywords = ["SignalR", "SignalR client", "Real-time messaging"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.3"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
pre-commit = "^2.9.3"
black = "^21.6b0"
isort = "^5.9.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
